# clarus

./: .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: download.py  setup.py
data/bundles/: carc_codes.json  cpt_codes_bundle.csv  ncci_edits_bundle.csv  nsa_qpa_rates_bundle.csv  plan_templates.json
scripts/: discover_seed_values.py  run_baseline.py
server/: app.py  env.py  main.py  models.py  schema.py
server/grader/: __init__.py  checks.py  runner.py
server/scenario/: __init__.py  generator.py  params.py
server/static/: index.html
server/tools/: compliance.py  distractors.py  payloads.py  rate_limits.py  reads.py  regulatory.py  writes.py
tests/: feature_check.py  score_breakdown.py  self_test.py  test_episodes.py  test_grader.py  test_inference.py  test_qualification.py
